--- a/ProductSale.csproj
+++ b/ProductSale.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\Exceptions\ProductExceptions\" />
+  </ItemGroup>
+
 </Project>
