--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,5 +21,14 @@ services:
       MYSQL_USER: productsale
       MYSQL_PASSWORD: productsale
 
+  redis:
+    image: redis:latest
+    container_name: redis
+    volumes:
+      - redis_data:/data
+    ports:
+      - "6379:6379"
+
 volumes:
   db_data: {}
+  redis_data: {}
